exports[`RangeInput supports having a selected item 1`] = `
<div
  className="root">
  <div
    className="items">
    <div
      className="item false undefined undefined">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function bound refine]}
          type="radio" />
        <span
          className="itemLabel">
          label
        </span>
      </label>
    </div>
    <div
      className="item itemSelected undefined undefined">
      <label>
        <input
          checked={true}
          className="itemRadio"
          onChange={[Function bound refine]}
          type="radio" />
        <span
          className="itemLabel">
          label
        </span>
      </label>
    </div>
    <div
      className="item false undefined undefined">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function bound refine]}
          type="radio" />
        <span
          className="itemLabel">
          label
        </span>
      </label>
    </div>
    <div
      className="item false undefined undefined">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function bound refine]}
          type="radio" />
        <span
          className="itemLabel">
          label
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RangeInput supports passing items values 1`] = `
<div
  className="root">
  <div
    className="items">
    <div
      className="item false undefined undefined">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function bound refine]}
          type="radio" />
        <span
          className="itemLabel">
          label
        </span>
      </label>
    </div>
    <div
      className="item false undefined undefined">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function bound refine]}
          type="radio" />
        <span
          className="itemLabel">
          label
        </span>
      </label>
    </div>
    <div
      className="item false undefined undefined">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function bound refine]}
          type="radio" />
        <span
          className="itemLabel">
          label
        </span>
      </label>
    </div>
    <div
      className="item false undefined undefined">
      <label>
        <input
          checked={false}
          className="itemRadio"
          onChange={[Function bound refine]}
          type="radio" />
        <span
          className="itemLabel">
          label
        </span>
      </label>
    </div>
  </div>
</div>
`;
